tests/ui/issues/issue-43420-no-over-suggest.stderr
error[E0308]: mismatched types
  --> $DIR/issue-43420-no-over-suggest.rs:8:9
   |
LL |     foo(&a);
   |     --- ^^ expected `&[u16]`, found `&Vec<u8>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&[u16]`
              found reference `&Vec<u8>`
note: function defined here
  --> $DIR/issue-43420-no-over-suggest.rs:4:4
   |
LL | fn foo(b: &[u16]) {}
   |    ^^^ ---------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
